--- a/static/css/style.css
+++ b/static/css/style.css
@@ -667,4 +667,26 @@
     }
 }
 
+/* Estilos generales para el banner */
+.banner-top {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+/* Ajuste para móvil (por defecto) */
+#btn_home_pr_contact {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* Ajuste para escritorio */
+@media (min-width: 768px) {
+    #btn_home_pr_contact {
+        width: 100%;
+        height: 25%; /* Reducir la altura al 50% */
+        object-fit: cover; /* Asegura que la imagen se ajuste correctamente */
+    }
+}
 
