--- a/templates/_base.html
+++ b/templates/_base.html
@@ -155,16 +155,16 @@
               <a href="" id="btn_home_menu_free_class" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"  style="background-color: #ff6a09;color: white; align-items: center;" data-bs-toggle="modal" data-bs-target="#exampleModal">Prueba GRATIS<i class="fa fa-arrow-right ms-3"></i></a>
           </div>
       </nav>
-      <!-- Navbar End -->
-        {% if not 'courses' in request.path %}
-            <!-- Banner Start -->
+        <!-- Navbar End -->
+        <!-- Banner 
+        {% if 'courses' not in request.path and 'casting' not in request.path %}
             <div class="banner-top text-center">
                 <a id="btn_home_pr_contact_a" href="{% url 'courses_group' %}">
-                    <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Clases de Baile" style="width: 100%; height: auto;">
+                    <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Clases de Baile">
                 </a>
             </div>
-            <!-- Banner End -->
         {% endif %}
+        -->
       {% block content %}
       {% endblock content %}
 
