--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -12,7 +12,7 @@
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class=" section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h1>
                     <h2 class="mb-2 color-cafe custom-h6">Te ayudamos a encontrar el curso de baile perfecto para ti.</h2>
-                    <p>Practicaras lo aprendido con la profesora y alumn@s en diferentes eventos sociales de baile. ¡Únete a nuestras clases hoy mismo!</p>
+                    <p>Practicaras lo aprendido con la profesora y alumn@s en diferentes eventos sociales de baile.</p>
 
                 </div>
                 <div class="row g-4 justify-content-center">
