--- a/templates/casting/thank_you.html
+++ b/templates/casting/thank_you.html
@@ -4,16 +4,22 @@
 
 {% block content %}
 
-    <!-- Gracias Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center px-3 color-oran">Gracias</h6>
-                <h2 class="mb-5 color-cafe">¡Gracias por registrarte!</h2>
-                <p class="lead">Hemos recibido tu información correctamente. Nos pondremos en contacto contigo pronto.</p>
+<!-- Gracias Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+            <h6 class="section-title bg-white text-center px-3 color-oran">Gracias</h6>
+            <h2 class="mb-5 color-cafe">¡Gracias por registrarte!</h2>
+            <p class="lead">Hemos recibido tu información correctamente. Nos pondremos en contacto contigo pronto.</p>
+            
+            <!-- Mensaje adicional -->
+            <div class="mt-4">
+                <p class="mb-3">Si lo deseas, puedes consultar nuestros <strong>cursos de baile</strong> disponibles:</p>
+                <a href="{% url 'courses_group' %}" class="btn btn-orange py-2 px-4">Ver Cursos de Baile</a>
             </div>
         </div>
     </div>
-    <!-- Gracias End -->
+</div>
+<!-- Gracias End -->
 
 {% endblock content %}
