--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -212,18 +212,22 @@
                 <div class="row g-4 justify-content-center">
                     {% for course in list_course_you_might_like %}
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                            <div class="course-item bg-light">
-                                <div class="position-relative overflow-hidden d-flex align-items-center">
-                                    <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove">
-                                    <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                        <a href="{% url 'courses_detail' course.slug %}" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
-                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Probar Clase</a>
+                            <!-- Envuelve toda la tarjeta en un enlace -->
+                            <a href="{% url 'courses_detail' course.slug %}" class="card-link" style="text-decoration: none; color: inherit;">
+                                <div class="course-item bg-light">
+                                    <div class="position-relative overflow-hidden d-flex align-items-center">
+                                        <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove">
+                                        <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+                                            <!-- Botón "Leer Más" -->
+                                            <span class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 30px 30px 30px;">
+                                                Leer Más
+                                            </span>
+                                            <!-- Botón "Probar Clase" -->
+                                        </div>
+                                        <div class="infoPrice">
+                                            <strong>S/.{{ course.price }}</strong>
+                                        </div>
                                     </div>
-                                    <div class="infoPrice">
-                                        <strong>S/.{{ course.price }}</strong>
-                                    </div>
-                                </div>
-                                <a href="{% url 'courses_detail' course.slug %}" class="card-link">
                                     <div class="text-center p-4 pb-0 border border-secondary rounded">
                                         <!-- Título del curso -->
                                         <h2 class="mb-0 custom-h5">{{ course.title }}</h2>
@@ -247,12 +251,11 @@
                                             <h2 class="mb-2 h2-small m-0">{{ course.instructor }}</h2>
                                         </div>
                                     </div>
-                                </a>
-                            </div>
+                                </div>
+                            </a>
                         </div>
                     {% endfor %}
                 </div>
-
                 <!-- list Courses End -->
             </div>
         </div>
