--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                             <a href="{% url 'courses_detail' course.slug %}" class="card-link" style="text-decoration: none; color: inherit;">
                                 <div class="course-item bg-light">
                                     <div class="position-relative overflow-hidden d-flex align-items-center">
-                                        <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove" loading="lazy">
+                                        <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove" loading="lazy" style="width: 100%; height: 100%; object-fit: cover;">
                                         <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                             <!-- Botón "Leer Más" -->
                                             <span class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 30px 30px 30px;">
