--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,19 @@
+@font-face {
+    font-family: 'Heebo';
+    src: url('{% static "fonts/heebo/Heebo-Regular.woff2" %}') format('woff2'),
+         url('{% static "fonts/heebo/Heebo-Regular.ttf" %}') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Nunito';
+    src: url('{% static "fonts/nunito/Nunito-Bold.woff2" %}') format('woff2'),
+         url('{% static "fonts/nunito/Nunito-Bold.ttf" %}') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
 /********** Template CSS **********/
 :root {
     --primary: #ff6a09;
