--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <div class="owl-carousel header-carousel position-relative">
                 {% for course in list_course_banner_top %}
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" loading="lazy" src="{{ course.image_banner_top.url }}" alt="Curso destacado de baile en Lima">
+                        <img class="img-fluid" src="{{ course.image_banner_top.url }}" alt="Curso destacado de baile en Lima">
                         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                             <div class="container">
                                 <div class="row justify-content-start">
