--- a/templates/index.html
+++ b/templates/index.html
@@ -9,22 +9,25 @@
             <div class="owl-carousel header-carousel position-relative">
                 {% for course in list_course_banner_top %}
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="{{ course.image_banner_top.url }}" alt="Curso destacado de baile en Lima">
-                        <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
-                            <div class="container">
-                                <div class="row justify-content-start">
-                                    <div class="col-sm-10 col-lg-8">
-                                        <h5 class="color-oran text-uppercase mb-3">Curso destacado</h5>
-                                        <h2 class="display-3 text-white custom-h1">{{ course.title }}</h2>
-                                        <div class="custom-content">
-                                            <p class="text-white mb-4 pb-2">{{ course.body | safe | truncatewords:30 }}</p>
+                        
+                            <img class="img-fluid" src="{{ course.image_banner_top.url }}" alt="Curso destacado de baile en Lima">
+                            <a href="{% url 'courses_detail' course.slug %}">
+                            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+                                <div class="container">
+                                    <div class="row justify-content-start">
+                                        <div class="col-sm-10 col-lg-8">
+                                            <h5 class="color-oran text-uppercase mb-3">Curso destacado</h5>
+                                            <h2 class="display-3 text-white custom-h1">{{ course.title }}</h2>
+                                            <div class="custom-content">
+                                                <p class="text-white mb-4 pb-2">{{ course.body | safe | truncatewords:30 }}</p>
+                                            </div>
+                                            <a href="{% url 'courses_detail' course.slug %}" id="btn_home_bt_read" class="btn btn-orange py-md-3 px-md-5 me-3 slideInRight" >Leer Mas</a>
+                                            <a href="" id="btn_home_bt_contact" class="btn btn-light py-md-3 px-md-5" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}">Probar Clase</a>
                                         </div>
-                                        <a href="{% url 'courses_detail' course.slug %}" id="btn_home_bt_read" class="btn btn-orange py-md-3 px-md-5 me-3 slideInRight" >Leer Mas</a>
-                                        <a href="" id="btn_home_bt_contact" class="btn btn-light py-md-3 px-md-5" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}">Probar Clase</a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 {% endfor %}
             </div>
