--- a/templates/instructors/instructors_detail.html
+++ b/templates/instructors/instructors_detail.html
@@ -43,45 +43,47 @@
                 <!-- list Courses Start -->
                 <div class="row g-4 justify-content-center">
                     {% for course in instructor.course.all %}
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                            <div class="course-item bg-light">
-                                <div class="position-relative overflow-hidden d-flex align-items-center">
-                                    <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove" loading="lazy" style="width: 100%; height: 100%; object-fit: cover;">
-                                    <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                        <a href="{% url 'courses_detail' course.slug %}" id="btn_ourtea_cards_read" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
-                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" id="btn_ourtea_cards_contact" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Probar Clase</a>
+                        {% if course.is_active %}
+                            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                                <div class="course-item bg-light">
+                                    <div class="position-relative overflow-hidden d-flex align-items-center">
+                                        <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove" loading="lazy" style="width: 100%; height: 100%; object-fit: cover;">
+                                        <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+                                            <a href="{% url 'courses_detail' course.slug %}" id="btn_ourtea_cards_read" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
+                                            <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" id="btn_ourtea_cards_contact" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Probar Clase</a>
+                                        </div>
+                                        <div class="infoPrice">
+                                            <strong>S/.{{ course.price }}</strong>
+                                        </div>
                                     </div>
-                                    <div class="infoPrice">
-                                        <strong>S/.{{ course.price }}</strong>
-                                    </div>
+                                    <a href="{% url 'courses_detail' course.slug %}" class="card-link">
+                                        <div class="text-center p-4 pb-0 border border-secondary rounded">
+                                            <!-- Título del curso -->
+                                            <h2 class="mb-0 custom-h5">{{ course.title }}</h2>
+                                        
+                                            <!-- Horario del curso -->
+                                            <div class="mb-0">
+                                                <small class="fa fa-star color-oran"></small>
+                                                <small>{{ course.schedule }}</small>
+                                                <small class="fa fa-star color-oran"></small>
+                                            </div>
+                                        
+                                            <!-- Ubicación -->
+                                            <div class="d-flex align-items-center justify-content-center my-2">
+                                                <i class="fas fa-map-marker-alt me-2"></i>
+                                                <h2 class="h2-small m-0">{{ course.district | safe }}</h2>
+                                            </div>
+                                        
+                                            <!-- Instructor -->
+                                            <div class="d-flex align-items-center justify-content-center my-2">
+                                                <i class="fas fa-chalkboard-teacher me-2"></i>
+                                                <h2 class="mb-2 h2-small m-0">{{ course.instructor }}</h2>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                                <a href="{% url 'courses_detail' course.slug %}" class="card-link">
-                                    <div class="text-center p-4 pb-0 border border-secondary rounded">
-                                        <!-- Título del curso -->
-                                        <h2 class="mb-0 custom-h5">{{ course.title }}</h2>
-                                    
-                                        <!-- Horario del curso -->
-                                        <div class="mb-0">
-                                            <small class="fa fa-star color-oran"></small>
-                                            <small>{{ course.schedule }}</small>
-                                            <small class="fa fa-star color-oran"></small>
-                                        </div>
-                                    
-                                        <!-- Ubicación -->
-                                        <div class="d-flex align-items-center justify-content-center my-2">
-                                            <i class="fas fa-map-marker-alt me-2"></i>
-                                            <h2 class="h2-small m-0">{{ course.district | safe }}</h2>
-                                        </div>
-                                    
-                                        <!-- Instructor -->
-                                        <div class="d-flex align-items-center justify-content-center my-2">
-                                            <i class="fas fa-chalkboard-teacher me-2"></i>
-                                            <h2 class="mb-2 h2-small m-0">{{ course.instructor }}</h2>
-                                        </div>
-                                    </div>
-                                </a>
                             </div>
-                        </div>
+                        {% endif %}
                     {% endfor %}
                 </div>
 
