--- a/templates/_base.html
+++ b/templates/_base.html
@@ -508,9 +508,20 @@
 
     </script>
 
-      {% block javascript %}
-      
-      {% endblock javascript %}
+    {% block javascript %}
+    
+    {% endblock javascript %}
+
+    <script defer type="text/javascript">
+            window.omnisend = window.omnisend || [];
+            omnisend.push(["brandID", "67f74837b7f0a3dba0637399"]);
+            omnisend.push(["track", "$pageViewed"]);
+            !function(){var e=document.createElement("script");
+            e.type="text/javascript",e.async=!0,
+            e.src="https://omnisnippet1.com/inshop/launcher-v2.js";
+            var t=document.getElementsByTagName("script")[0];
+            t.parentNode.insertBefore(e,t)}();
+    </script>
 
   </body>
 
