ajuste de contacto

--- a/templates/content_site/contact.html
+++ b/templates/content_site/contact.html
@@ -11,12 +11,8 @@
                 <h6 class="section-title bg-white text-center px-3 color-oran">Contáctanos</h6>
                 <h2 class="mb-5 color-cafe">Consulta sobre Nuestros Cursos de Baile</h2>
             </div>
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="{% static 'img/contact/contact.jpg' %}" alt="clases de Baile" style="object-fit: cover;">
-                    </div>
-                </div>
+            <div class="row g-5 justify-content-center"> 
+       
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h5>Te Escuchamos</h5>
                     <p class="mb-4">No dudes en comunicarte con nosotros a través de cualquiera de los siguientes métodos.</p>
@@ -61,6 +57,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
