--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,19 +1,3 @@
-@font-face {
-    font-family: 'Heebo';
-    src: url('{% static "fonts/heebo/Heebo-Regular.woff2" %}') format('woff2'),
-         url('{% static "fonts/heebo/Heebo-Regular.ttf" %}') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Nunito';
-    src: url('{% static "fonts/nunito/Nunito-Bold.woff2" %}') format('woff2'),
-         url('{% static "fonts/nunito/Nunito-Bold.ttf" %}') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
-
 /********** Template CSS **********/
 :root {
     --primary: #ff6a09;
@@ -585,6 +569,20 @@
     }
 }
 
+.custom-h5 {
+    font-size: 1.25rem;      /* Tamaño estándar para h5 */
+    font-weight: 500;        /* Peso medio */
+    line-height: 1.4;        /* Espaciado para mejorar lectura */
+}
+
+/* Ajuste para pantallas pequeñas */
+@media (max-width: 767px) {
+    .custom-h5 {
+        font-size: 1rem;     /* Tamaño más pequeño para móviles */
+        text-transform: none;
+    }
+}
+
 
 .btn-orange {
     background-color: #ff6a09;
@@ -706,3 +704,7 @@
     }
 }
 
+.breadcrumb-item + .breadcrumb-item::before {
+    content: "›";
+    color: #ff7b00; /* tu color de marca */
+}
