--- a/templates/courses/course_detail_otros.html
+++ b/templates/courses/course_detail_otros.html
@@ -7,12 +7,12 @@
     {% endif %}
 {% endblock title %}
 
-
 {% if course.meta_description %}
     {% block meta_description %}
         <meta name="description" content="{{ course.meta_description }}">
     {% endblock meta_description %}
 {% endif %}
+
 
 {% if course.meta_keywords %}
     {% block meta_keywords %}
@@ -20,36 +20,28 @@
     {% endblock meta_keywords %}
 {% endif %}
 
+
 {% block content %}
     <!-- Detail Course and call to action -->
     <div class="container-xxl py-3 category">
         <div class="container">
-                <nav aria-label="breadcrumb" class="mt-3">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item">
-                            <a href="{% url 'home' %}" class="color-cafe">Inicio</a>
-                        </li>
-                        <li class="breadcrumb-item">
-                            <a href="{% url 'courses_group' %}" class="color-cafe">Clases de Baile</a>
-                        </li>
-                        <li class="breadcrumb-item active" aria-current="page">{{ course.title }}</li>
-                    </ol>
-                </nav>
-              
+            <nav aria-label="breadcrumb" class="mt-3">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'home' %}" class="color-cafe">Inicio</a>
+                    </li>
+                    <li class="breadcrumb-item active" aria-current="page">{{ course.title }}</li>
+                </ol>
+            </nav>
+
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="row align-items-center">
                     <div class="col-6 col-md-6 text-left">
                         <h1 class="custom-h2 color-oran" style="text-align: left; white-space: nowrap;">{{ course.h1 }}</h1>
                     </div>
                     <div class="col-6 col-md-6 text-right">
-                        <p class="custom-h2 color-oran" style="text-align: right; white-space: nowrap;">S/. {{ course.price }}</p>
+                        <p class="custom-h2 color-oran" style="text-align: right; white-space: nowrap;"></p>
                     </div>                    
-                    <div class="col-6 col-md-6 text-left">
-                        <p class="custom-h2" style="text-align: left; white-space: nowrap;">{{ course.schedule }}</p>
-                    </div>                    
-                    <div class="col-6 col-md-6 text-right">
-                        <p class="custom-h2" style="text-align: right; white-space: nowrap;">{{ course.place | safe }}</p>
-                    </div>
                 </div>
 
             </div>
@@ -60,52 +52,14 @@
                     <div class="row g-3">
 
                         <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
-                            <!-- Escritorio -->
-                            <div class="d-none d-md-block">
-                                {% if course.video_url %}
-                                    <div style="padding:56.25% 0 0 0;position:relative;">
-                                        <iframe 
-                                            src="{{ course.video_url }}?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479"
-                                            frameborder="0" 
-                                            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
-                                            style="position:absolute;top:0;left:0;width:100%;height:100%;" 
-                                            title="Video Player"
-                                            loading="lazy">
-                                        </iframe>
-                                    </div>
-                                {% else %}
-                                    <p>No video available</p>
-                                {% endif %}
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
+                                <p class="custom-h2 color-cafe">{{ course.body_title | safe }}</p>
+                                <p class="mb-4">{{ course.technical_details | safe }}</p>
                             </div>
-                        
-                            <!-- Móvil -->
-                            <div class="d-block d-md-none">
-                                {% if course.video_url %}
-                                <div class="video-wrapper" style="position: relative; cursor: pointer; text-align: center;">
-                                    <div style="padding:56.25% 0 0 0;position:relative;">
-                                        <iframe 
-                                            src="{{ course.video_url }}?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479"
-                                            frameborder="0" 
-                                            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
-                                            style="position:absolute;top:0;left:0;width:100%;height:100%;" 
-                                            title="Video Player"
-                                            loading="lazy">
-                                        </iframe>
-                                    </div>
-                                </div>
-                                {% else %}
-                                    <p>No video available</p>
-                                {% endif %}
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
+                                <p class="custom-h2 color-cafe">Beneficios</p>
+                                <p class="mb-4">{{ course.benefits | safe }}</p>
                             </div>
-                        </div>
-                        
-                        <!-- Solo visible en pantallas medianas y grandes (no en móvil) -->
-                        <div class="col-lg-6 col-md-12 wow zoomIn d-none d-md-block" data-wow-delay="0.3s">
-                            <img class="img-fluid" src="{{ course.image_fiz.url }}" alt="{{ course.title }}">
-                        </div>
-
-                        <div class="col-lg-6 col-md-12 wow zoomIn d-none d-md-block" data-wow-delay="0.5s">
-                            <img class="img-fluid" src="{{ course.image_fid.url }}" alt="{{ course.title }}">
                         </div>
 
                     </div>
@@ -120,7 +74,7 @@
                         <div class="row g-3">
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <h4 class="text-dark">Solicita más info y reserva tu clase GRATIS hoy mismo!.</h4>
+                                    <h4 class="text-dark">Solicita más informacion.</h4>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -196,33 +150,7 @@
         </div>
     </div>
     <!-- Detail Course and call to action -->
-    
 
-    <!-- About Start -->
-    <div class="container-xxl">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
-                    <p class="custom-h2 color-cafe">{{ course.body_title | safe }}</p>
-                    <p class="mb-4">{{ course.technical_details | safe }}</p>
-                  </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
-
-    <!-- About Start -->
-    <div class="container-xxl">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
-                    <p class="custom-h2 color-cafe">Beneficios</p>
-                    <p class="mb-4">{{ course.benefits | safe }}</p>
-                  </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
     
     <!-- About Start -->
     <div class="container-xxl mb-5">
