--- a/templates/content_site/faq.html
+++ b/templates/content_site/faq.html
@@ -31,9 +31,8 @@
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
 
-            <h1 class="section-title bg-white text-center px-3 color-oran custom-h6">Preguntas Frecuentes sobre Clases de Baile en Lima</h1>
-            <h2 class="custom-h2 mb-2">FAQ</h2>
-
+            <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">FAQ</h2>
+            <h1 class="custom-h2 mb-2">Preguntas Frecuentes sobre Clases de Baile en Lima</h1>
         </div>
 
         <div class="row justify-content-center">
