--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,6 +1,9 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Blog | Cuban Groove{% endblock title %}
+{% block title %}{{ post.title }}{% endblock title %}
+{% block meta_description %}
+    <meta name="description" content="{{ post.title }}">
+{% endblock meta_description %}
 
 {% block content %}
 
