--- a/templates/_base.html
+++ b/templates/_base.html
@@ -419,8 +419,27 @@
       <!-- Template Javascript -->
       <script src="{% static 'js/main.js' %}"></script>
       <script defer>
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const utmParams = ['utm_source', 'utm_medium', 'utm_campaign', 'utm_term', 'utm_content'];
+
+            utmParams.forEach(param => {
+                const value = urlParams.get(param);
+                if (value) {
+                    localStorage.setItem(param, value); // Guardar en localStorage
+                }
+                // Cargar desde localStorage si existe
+                const saved = localStorage.getItem(param);
+                if (saved) {
+                    document.getElementById(param).value = saved;
+                }
+            });
+        });
+
         var exampleModal = document.getElementById('exampleModal')
         exampleModal.addEventListener('show.bs.modal', function (event) {
+            //console.log('entroooooooooooooooo')
             // Button that triggered the modal
             var button = event.relatedTarget
             // Extract info from data-bs-* attributes
@@ -437,6 +456,8 @@
                 }
             });
 
+            //console.log(document.getElementById('utm_source').value)
+            //console.log(localStorage.getItem("utm_source"))
             // Capturar Referer
             const referer = document.referrer;
             document.getElementById('referer').value = referer;
