--- a/templates/_base.html
+++ b/templates/_base.html
@@ -119,9 +119,9 @@
       <!-- Navbar Start -->
       <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
           <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary">
+            <p class="m-0 text-primary">
                 <img src="{% static 'img/logos/logo_desk.webp' %}" style="width: 200px; height: auto;" alt="Clases de Salsa en Lima">
-            </h2>
+            </p>
           </a>
           <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
               <span class="navbar-toggler-icon"></span>
@@ -175,7 +175,7 @@
             <div class="container py-5">
                 <div class="row g-5 justify-content-center">
                     <div class="col-lg-3 col-md-6 text-center">
-                        <h4 class="text-white mb-3">Contacto</h4>
+                        <p class="custom-h4 text-white mb-3">Contacto</p>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Lima, PERU</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+51 991 337 159</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i> info@cubangrooveperu.com</p>
@@ -189,7 +189,7 @@
                     
                     <!-- Hipervínculos SEO -->
                     <div class="col-lg-3 col-md-6 text-center">
-                        <h4 class="text-white mb-3">Clases de Baile</h4>
+                        <p class="custom-h4 text-white mb-3">Clases de Baile</p>
                         <ul class="list-unstyled">
                             <li><a href="{% url 'courses_group' %}" class="text-white">Clases de Salsa</a></li>
                             <li><a href="{% url 'courses_group' %}" class="text-white">Clases de Salsa en Lima</a></li>
@@ -201,7 +201,7 @@
                     </div>
                     
                     <div class="col-lg-3 col-md-6 text-center">
-                        <h4 class="text-white mb-3">Academias y Cursos</h4>
+                        <p class="custom-h4 text-white mb-3">Academias y Cursos</p>
                         <ul class="list-unstyled">
                             <li><a href="{% url 'courses_group' %}" class="text-white">Clases de Baile</a></li>
                             <li><a href="{% url 'courses_group' %}" class="text-white">Clases de Baile en Miraflores</a></li>
@@ -212,7 +212,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 text-center">
-                        <h4 class="text-white mb-3">Academias de Baile</h4>
+                        <p class="custom-h4 text-white mb-3">Academias de Baile</p>
                         <ul class="list-unstyled">
                             <li><a href="{% url 'courses_group' %}" class="text-white">Academia de Baile en Surco</a></li>
                             <li><a href="{% url 'courses_group' %}" class="text-white">Academia de Baile en San Isidro</a></li>
@@ -248,7 +248,7 @@
 
                 <div class="modal-content">
                     <div class="modal-header text-center" style="background-color: #ff6a09; color: white;">
-                        <h4 class="modal-title w-100 custom-h4">🎁¡Reserva tu clase GRATIS ahora!</h4>
+                        <p class="modal-title w-100 custom-h4">🎁¡Reserva tu clase GRATIS ahora!</p>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="background-color: white;"></button>
                     </div>
                     <div class="modal-body">
@@ -350,7 +350,7 @@
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">Registro Exitoso</h5>
+                  <p class="custom-h5 modal-title">Registro Exitoso</p>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -370,7 +370,7 @@
                 <div class="modal-content">
                     <!-- Encabezado del modal -->
                     <div class="modal-header bg-primary text-white">
-                        <h5 class="modal-title" id="modalAuthorizationLabel">Autorización de Datos</h5>
+                        <p class="custom-h5 modal-title" id="modalAuthorizationLabel">Autorización de Datos</p>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <!-- Cuerpo del modal -->
