--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
                                 <div class="container">
                                     <div class="row justify-content-start">
                                         <div class="col-sm-10 col-lg-8">
-                                            <h5 class="color-oran text-uppercase mb-3">Curso destacado</h5>
-                                            <h2 class="display-3 text-white custom-h1">{{ course.title }}</h2>
+                                            <p class="custom-h5 color-oran text-uppercase mb-3">Curso destacado</p>
+                                            <p class="display-3 text-white custom-h1">{{ course.title }}</p>
                                             <div class="custom-content">
                                                 <p class="text-white mb-4 pb-2">{{ course.body | safe | truncatewords:30 }}</p>
                                             </div>
@@ -43,7 +43,7 @@
                     <div class="service-item text-center">  <!-- Eliminamos pt-3 -->
                         <div class="p-3">  <!-- Reducimos padding interno de p-4 a p-3 -->
                             <i class="fa fa-2x fa-comments text-primary mb-2"></i>  <!-- Icono más pequeño -->
-                            <h5 class="mb-2">Feedback Constante</h5>  <!-- Reducimos margen inferior -->
+                            <p class="custom-h5 mb-2"><strong>Feedback Constante</strong></p>  <!-- Reducimos margen inferior -->
                             <p class="small mb-0">Clases <strong>personalizadas</strong> con correcciones adaptadas a tu ritmo.</p>  <!-- Texto más compacto -->
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                     <div class="service-item text-center">
                         <div class="p-3">
                             <i class="fa fa-2x fa-chart-line text-primary mb-2"></i>
-                            <h5 class="mb-2">Progreso Garantizado</h5>
+                            <p class="custom-h5 mb-2"><strong>Progreso Garantizado</strong></p>
                             <p class="small mb-0">Resultados rapidos <strong>desde las primeras clases</strong>.</p>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                     <div class="service-item text-center">
                         <div class="p-3">
                             <i class="fa fa-2x fa-bolt text-primary mb-2"></i>
-                            <h5 class="mb-2">Clases Dinámicas</h5>
+                            <p class="custom-h5 mb-2"><strong>Clases Dinámicas</strong></p>
                             <p class="small mb-0">Ambiente <strong>energético</strong> para aprender divirtiéndote.</p>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                     <div class="service-item text-center">
                         <div class="p-3">
                             <i class="fa fa-2x fa-shoe-prints text-primary mb-2"></i>
-                            <h5 class="mb-2">Técnica Profesional</h5>
+                            <p class="custom-h5 mb-2"><strong>Técnica Profesional</strong></p>
                             <p class="small mb-0">Domina los <strong>fundamentos cubanos</strong> con expertos.</p>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="section-title bg-white text-center px-3 color-oran custom-h6 mb-3">Clases de baile para adultos</h1>
+                <h1 class="section-title bg-white text-center px-3 color-oran custom-h6 mb-3">Clases de salsa y baile cubano en Lima para adultos</h1>
             </div>
             <div class="row g-5">
                 <!-- Imagen (izquierda) -->
@@ -99,8 +99,8 @@
     
                 <!-- Contenido (derecha) -->
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h6 class="section-title bg-white text-start color-oran pe-3">¿Por qué elegirnos?</h6>
-                    <h6 class="mb-4 custom-h1">Aprenderas a bailar con <span class="color-oran">método cubano</span></h6>
+                    <p class="custom-h6 section-title bg-white text-start color-oran pe-3">¿Por qué elegirnos?</p>
+                    <p class="mb-4 custom-h1"><strong>Aprenderas a bailar con <span class="color-oran">método cubano</span></strong></p>
                     
                     <p class="mb-4"><strong>¿Buscas clases de baile realmente funcionen?</strong> En Cuban Groove no solo te enseñamos pasos: te entrenamos para que <strong>sientas la música</strong>, domines la técnica y ganes confianza.</p>
                     
@@ -198,7 +198,7 @@
         <div class="container-xxl mt-5 mb-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">Clases de Baile</h2>
+                    <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">Cursos destacados</h2>
                     <p class="custom-h2 mb-2">Salsa, tecnica de danza, afro y más en un ambiente divertido</p>
                 </div>
                 <!-- list Courses Start -->
@@ -293,8 +293,9 @@
      <div id="instructors" class="container-xxl mb-5">
          <div class="container">
              <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                 <h6 class="section-title bg-white text-center px-3 color-oran">Instructor</h6>
-                 <h2 class="custom-h2 mb-2 color-cafe"">Instructor</h2>
+                 <h2 class="custom-h6 section-title bg-white text-center px-3 color-oran">Nuestro Instructor</h2>
+                 <p class="custom-h2 mb-2">Instructor</p>
+                 
              </div>
              <div class="row g-4 justify-content-center">
                  {% for instructor in instructors %}
@@ -315,8 +316,9 @@
                              </div>
                              <div class="text-center p-4">
                                  <!-- Nombre y especialidad del instructor -->
-                                 <p class="mb-0 custom-h5">{{ instructor.name }}</p>
-                                 <small>{{ instructor.specialty }}</small>
+                                 <h3 class="mb-0 custom-h5">
+                                  {{ instructor.name }} – <span class="text-muted">{{ instructor.specialty }}</span>
+                                 </h3>
                                  <div>
                                      <!-- Botón "Mis Cursos" -->
                                      <a href="{% url 'instructor_detail' instructor.slug %}" class="btn btn-orange py-2 px-4 mt-2" id="btn_home_instructor_courses">
